Fix T72182: Fade Layers Option does not work when activating a layer from Dope Sheet or Outliner

The layer was activated, but the datablock was not tagged to recalc GPU cache.